--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "www.themeiwu.com" # the subpath of your site, e.g. /blog/
+baseurl: "/wuthemei.github.io/" # the subpath of your site, e.g. /blog/
 url: "www.themeiwu.com" # the base hostname & protocol for your site
 
 # User setting
