--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "https://themeiwu.com/JekyllTheme-ProjectGaia/index.html" # the subpath of your site, e.g. /blog/
-url: "www.themeiwu.com" # the base hostname & protocol for your site
+baseurl: "/index.html" # the subpath of your site, e.g. /blog/
+url: "/index.html" # the base hostname & protocol for your site
 
 # User setting
 owner:
