--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-title: Project-Gaia
+title: Edition Alphas ' Lab
 email:
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
