--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-title: Mr.Kafkas'Singular Spot-ED.α
+title: Kafka先生的生活奇点
 email: themeiwu@hotmail.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
