--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@
 title: Kafka先生的生活奇点
 email: themeiwu@hotmail.com
 description: > # this means to ignore newlines until "baseurl"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  kafka先生的生活奇点 mr.kafka's singular point alpha实验室 alpha lab
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
