--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-title: FOOTPRINTS@themeiwu
+title: footprints@themeiwu
 email: themeiwu@hotmail.com
 description: > # this means to ignore newlines until "baseurl"
   kafka先生的生活奇点 mr.kafka's singular point alpha实验室 alpha lab
